fix: harden resource concurrency